--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-color": "^2.17.3",
+    "react-contenteditable": "^3.3.2",
     "react-dom": "^16.9.0",
+    "react-draggable": "^3.3.2",
+    "react-feather": "^2.0.3",
     "react-scripts": "3.1.1",
     "reactcss": "^1.2.3"
   },
