--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "dom-to-image": "^2.6.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-color": "^2.17.3",
@@ -11,6 +12,7 @@
     "react-dom": "^16.9.0",
     "react-draggable": "^3.3.2",
     "react-feather": "^2.0.3",
+    "react-powerplug": "^1.0.0",
     "react-scripts": "3.1.1",
     "reactcss": "^1.2.3"
   },
